--- a/03_indexation.qmd
+++ b/03_indexation.qmd
@@ -38,6 +38,8 @@ Indexation **par position** :
 
 `x[2,1] renvoie "Benjamin"`
 
+<br>
+
 ```{.r}
      [,1]       [,2]     
 [1,] "Marion"   "Hélène" 
@@ -48,7 +50,7 @@ Indexation **par position** :
 
 -   Indexation **par position** :
 
-x <- list(c(TRUE, TRUE, FALSE), c(8.04, 18.01, 11.05, 14.05), "804")
+`x <- list(c(TRUE, TRUE, FALSE), c(8.04, 18.01, 11.05, 14.05), "804")`
 
 `x[[2]] renvoie le deuxième vecteur de la liste x soit c(8.04, 18.01, 11.05, 14.05)`
 
@@ -63,7 +65,7 @@ x <- list(c(TRUE, TRUE, FALSE), c(8.04, 18.01, 11.05, 14.05), "804")
 
 `x$enf[1] renvoie le premier élément du vecteur nommé "enf" de la liste x soit "Marion"`
 
-## Data.frame :
+## Data.frame (1/2)
 
 -   Indexation **par position** : comme pour les matrices
 
@@ -73,6 +75,8 @@ x <- list(c(TRUE, TRUE, FALSE), c(8.04, 18.01, 11.05, 14.05), "804")
 -   Les moyens d'indexation peuvent se combiner
 
 → Il y a donc une multitude de façons d'accéder à une valeur dans un
-data.frame !
+data.frame !
 
-![](img/clipboard-premon-sexe-taille.png)\
+## Data.frame (2/2)
+
+![](img/clipboard-premon-sexe-taille.png){fig-align="center"}
