--- a/02_objets.qmd
+++ b/02_objets.qmd
@@ -54,10 +54,10 @@ matrix(c(1,2,3,4,5,6), nrow = 2, ncol = 3)
 ```{.r}
 x ← list(c(TRUE, TRUE, FALSE),           # 1er élément : un vecteur de trois booléens
          c(8.04, 18.01, 11.05, 14.05),   # 2e élément : un vecteur de quatre numériques
-         c(""804"))                      # 3e élément : un vecteur d'une chaîne de caractères
+         c("804"))                      # 3e élément : un vecteur d'une chaîne de caractères
          
-`x ← data.frame(nom=c("Yaël","Luan","Jade"),  # 1er élément : un vecteur « nom » de trois chaînes de caractères`
-                sexe = factor(c("H","F","F"), # 2e élément : un vecteur « sexe » de trois chaînes de caractères (en facteurs)
+x ← data.frame(nom=c("Yaël","Luan","Jade"),  # 1er élément : un vecteur « nom » de trois chaînes de caractères
+              sexe = factor(c("H","F","F"), # 2e élément : un vecteur « sexe » de trois chaînes de caractères (en facteurs)
                 age = c(5,1,3))               # 3e élément : un vecteur « age » de trois numériques 
                 
 ```
