--- a/04_traitement-de-donnees.qmd
+++ b/04_traitement-de-donnees.qmd
@@ -88,18 +88,18 @@ Fonctions utiles :
 -   Avec le package **dplyr** :
 
     -   Pour sélectionner des colonnes dans une table, on utilise la
-        fonction
+        fonction `select()`
 
-        -   select() maTable %\>% select(noms_des_colonnes)
+        `maTable %\>% select(noms_des_colonnes)`
 
     -   Pour filtrer les lignes dans une table à l’aide de conditions
-        logiques, on utilise la fonction filter()
+        logiques, on utilise la fonction `filter()`
 
-        -   maTable %\>% filter(conditions)
+        `maTable %\>% filter(conditions)`
 
-`ma_table %>% filter(Profession == ''Militaire'')`
+[ma_table %>% filter(Profession == "Militaire")]{.Bourgeon2} 
 
-`ma_table %>% filter(Age < 30) %>% select(Nom_prenom)`
+[ma_table %>% filter(Age < 30) %>% select(Nom_prenom)]{.Macaron2} 
 
 ![](img/clipboard-filtre2.png)
 
