--- a/04_traitement-de-donnees.qmd
+++ b/04_traitement-de-donnees.qmd
@@ -30,19 +30,19 @@ Fonctions utiles :
     nécessaires aux traitements classiques à opérer sur une table de
     données.
 
--   À part pour la lecture et l’écriture de fichiers, les outils
+-   À part pour la lecture et l'écriture de fichiers, les outils
     proposés relèvent des packages **dplyr** et **tidyr** : ils sont
-    d’un usage plus simple que les outils R de base et couvrent beaucoup
+    d'un usage plus simple que les outils R de base et couvrent beaucoup
     des fonctionnalités les plus courantes.
 
 ## Outils DPLYR & TIDYR
 
 -   Objectif de dplyr : rassembler dans un seul package les outils de
-    manipulation de données les plus importants pour l’analyse des
+    manipulation de données les plus importants pour l'analyse des
     données
 
-    ⇒ ensemble de fonctions correspondant à un ensemble d’opérations
-      élémentaires
+    ⇒ ensemble de fonctions correspondant à un ensemble d'opérations
+    élémentaires
 
 -   Deux principes pour les packages *tidyr* et *dplyr* :
 
@@ -54,20 +54,15 @@ Fonctions utiles :
         R-Studio, le raccourci clavier pour cet opérateur est : **Ctrl +
         Shift + M**
 
-
 ::: columns
 ::: {.column width="50%"}
-
 ![](img/clipboard-pipe1.png)
 :::
 
 ::: {.column width="50%"}
-
 ![](img/clipboard-pipe2.png)
-
 :::
-
-::::
+:::
 
 ## Filtre et sélection dans une table (1/2)
 
@@ -92,14 +87,14 @@ Fonctions utiles :
 
         `maTable %\>% select(noms_des_colonnes)`
 
-    -   Pour filtrer les lignes dans une table à l’aide de conditions
+    -   Pour filtrer les lignes dans une table à l'aide de conditions
         logiques, on utilise la fonction `filter()`
 
         `maTable %\>% filter(conditions)`
 
-[ma_table %>% filter(Profession == "Militaire")]{.Bourgeon2} 
+[ma_table %\>% filter(Profession == "Militaire")]{.Bourgeon2}
 
-[ma_table %>% filter(Age < 30) %>% select(Nom_prenom)]{.Macaron2} 
+[ma_table %\>% filter(Age \< 30) %\>% select(Nom_prenom)]{.Macaron2}
 
 ![](img/clipboard-filtre2.png)
 
@@ -120,8 +115,9 @@ Fonctions utiles :
     -   `table$new_var <- vecteur1 OU table1$new_var <- table2$var1` →
         création à partir de variables externes
 
-    -   `table$new_var <- ifelse(table$varref < x, val1, val2)`  
-    OU `table$new_var <- case_when(table$varref < x ~ val1, TRUE ~ val2)`
+    -   `table$new_var <- ifelse(table$varref < x, val1, val2)`\
+        OU
+        `table$new_var <- case_when(table$varref < x ~ val1, TRUE ~ val2)`
         → traitement conditionnel
 
 ## Création ou modification de variables dans une table
@@ -130,17 +126,23 @@ Fonctions utiles :
     permet de créer plusieurs variables à la fois et permet de
     s'affranchir de l'indexation :
 
-    - `table ← table %>% mutate(new_var1 = var1, newvar2 = var2)` → formule générique  
+    -   `table ← table %>% mutate(new_var1 = var1, newvar2 = var2)` →
+        formule générique
 
-    - `table ← table %>% mutate(new_var1 = constante)` → création d'une constante  
-        
-    - `table ← table %>% mutate(new_var2 = fonction(var1))` → création à partir d'une formule  
+    -   `table ← table %>% mutate(new_var1 = constante)` → création
+        d'une constante
 
-    - `table ← table %>% mutate(new_var3 = var1 + var2)` → création à partir d'opérations arithmétiques  
-        
-    - `table ← table %>% mutate(new_var4 = vecteur1)` → création à partir de variables externes
+    -   `table ← table %>% mutate(new_var2 = fonction(var1))` → création
+        à partir d'une formule
 
-    Pour modifier une variable on affecte la nouvelle valeur à une variable existante
+    -   `table ← table %>% mutate(new_var3 = var1 + var2)` → création à
+        partir d'opérations arithmétiques
+
+    -   `table ← table %>% mutate(new_var4 = vecteur1)` → création à
+        partir de variables externes
+
+    Pour modifier une variable on affecte la nouvelle valeur à une
+    variable existante
 
 ## Fonctions utiles au traitement des chaînes de caractères
 
@@ -158,7 +160,7 @@ Fonctions utiles :
 → possibilité de trier selon plusieurs colonnes : les variables de tri
 doivent être séparées par une virgule.
 
-→ on encadre les variables qu’il faut trier de façon décroissante par la
+→ on encadre les variables qu'il faut trier de façon décroissante par la
 fonction *desc()*.
 
 ## Fusion de tables
@@ -177,12 +179,12 @@ fonction *desc()*.
 ## Fusion de tables
 
 -   Il est possible de réaliser une jointure à l'aide de plusieurs
-    variables identifiantes : l'argument by s'écrit alors **c(''id1'',
-    ''id2'', ...)**
+    variables identifiantes : l'argument by s'écrit alors
+    **c(''id1'',''id2'', ...)**
 
 -   Lorsque les variables de jointure ont des noms différents dans les
     deux tables, l'argument by prend comme paramètre un vecteur du type
-    **c(''id1_tab1'' = ''id1_tab2'', ''id2_tab1'' = ''id2_tab2'',…)**
+    **c(''id1_tab1'' = ''id1_tab2'',''id2_tab1'' = ''id2_tab2'',...)**
 
 -   Si rien n'est précisé, la fusion se fait sur l'ensemble des
     variables portant le même nom dans les deux tables
@@ -204,100 +206,69 @@ fonction *desc()*.
 instructions par une virgule
 
 → on peut utiliser les fonctions statistiques de base telles que max,
-min, mean, sd, n…
+min, mean, sd, n...
 
-→ ungroup permet de ne plus tenir compte du regroupement par la suite (avec 
-l'argument `drop = FALSE`)
+→ ungroup permet de ne plus tenir compte du regroupement par la suite
+(avec l'argument `drop = FALSE`)
 
 ## Transposition ou réorganisation de table
 
 <br>
 
-Pour réorganiser une table, c'est à dire passer des lignes en
-colonnes ou inversement, on utilise les fonctions `pivot_wider()` 
-et `pivot_longer()` du package tidyr.
+Pour réorganiser une table, c'est à dire passer des lignes en colonnes
+ou inversement, on utilise les fonctions `pivot_wider()` et
+`pivot_longer()` du package tidyr.
 
 ## Pivot_wider()
 
 <br>
 
-![](img/clipboard-pivotwider.png){fig-align="center"}
-<br>
+![](img/clipboard-pivotwider.png){fig-align="center"} <br>
 
 `maTable %>% pivot_wider(col_de_noms, col_de_valeurs)`
-   
-- **col_de_noms** = nom de la variable dont les modalités deviendront les intitulés de colonne
 
-- **col_de_valeurs** = nom de la variable à utiliser pour remplir les colonnes
+-   **col_de_noms** = nom de la variable dont les modalités deviendront
+    les intitulés de colonne
+
+-   **col_de_valeurs** = nom de la variable à utiliser pour remplir les
+    colonnes
 
 ## Pivot_longer()
 
 <br>
 
-![](img/clipboard-pivotlonger.png){fig-align="center"}
-<br>
+![](img/clipboard-pivotlonger.png){fig-align="center"} <br>
 
 `maTable %>% pivot_longer( variables_apivoter , names_to = "indicateur", values_to = "valeur")`
 
-- **variables_a_pivoter** = nom de l’ensemble des variables à représenter
+-   **variables_a_pivoter** = nom de l'ensemble des variables à
+    représenter
 
-- **names_to** = nom de la première colonne à créer
+-   **names_to** = nom de la première colonne à créer
 
-- **values_to** = nom de la deuxième colonne à créer
+-   **values_to** = nom de la deuxième colonne à créer
 
 ## Exemples sur les pivots
 
 ![](img/pivots_exemple.png)
 
-```r
+``` r
 # Passage de tab1 à tab2 avec la fonction pivot_wider()
 tab2 ← pivot_wider(tab1, names_from = mesure, values_from = temperature)
 # Passage de tab2 à tab1 avec la fonction pivot_longer() 
 tab1 ← pivot_longer(tab2, c(min, max, moy), names_to = "mesure", values_to = "temperature")
 ```
-  
+
 ## Lecture/ Ecriture de fichiers
 
-+------------------+------------------+------------------+
-| Type             | Lecture          | Ecriture         |
-+==================+==================+==================+
-| Texte            | la fonction r    | la fonction r    |
-|                  | e                | e                |
-|                  | ader::read_delim | adr::write_delim |
-|                  |                  |                  |
-|                  |                  |                  |
-|                  |                  |                  |
-|                  |                  |                  |
-|                  |                  |                  |
-+------------------+------------------+------------------+
-| RDS              | Fonction         | Fonction         |
-|                  | read_rds         | readr::write_rds |
-+------------------+------------------+------------------+
-| XLS              | les fonctions du | les fonctions du |
-|                  | package readxl   | package openxlsx |
-+------------------+------------------+------------------+
-| SAS ou SPSS      | les fonctions    | il vaut mieux    |
-|                  | read_sas et      | exporter au      |
-|                  | read_spss du     | format texte et  |
-|                  | package haven.   | lire le fichier  |
-|                  | Attention : il   | dans le logiciel |
-|                  | vaut mieux       | d'origine en     |
-|                  | exporter au      | tant que fichier |
-|                  | format texte     | au format        |
-|                  | dans le logiciel | texte !          |
-|                  | d'origine pour   |                  |
-|                  | le lire en tant  |                  |
-|                  | que données      |                  |
-|                  | texte dans R.    |                  |
-+------------------+------------------+------------------+
-| ODS              | la fonction      | la fonction      |
-|                  | read_ods du      | write_ods du     |
-|                  | package readODS  | package readODS  |
-+------------------+------------------+------------------+
-| Parquet          | Les packages     | Le package       |
-|                  | `arrow` et       | `arrow`]         |
-|                  | `duckdb`         |                  |
-+------------------+------------------+------------------+
+| Type        | Lecture                                           | Ecriture                                                                      |
+|------------|--------------------------------|------------------------------|
+| Texte       | \`reader::read_delim()\`                          | \`reader::write_delim()\`                                                     |
+| RDS         | \`read_rds()\`                                    | Fonction readr::write_rds                                                     |
+| XLS         | les fonctions du package {readxl}                 | les fonctions du package {openxlsx}                                           |
+| SAS ou SPSS | \`haven::read_sas()\` et \`haven::read_spss()\`   | Exporter au format texte puis lecture dans SAS ou SPSS (sans objet désormais) |
+| ODS         | `readODS::read_ods()`                             | `readODS::write_ods()`                                                        |
+| Parquet     | Les packages `arrow` et `duckdb`                  | Le package `arrow`\]                                                          |
 
 ## Base de données avec R
 
@@ -310,6 +281,6 @@ tab1 ← pivot_longer(tab2, c(min, max, moy), names_to = "mesure", values_to = "
 `cnx <- dbConnect(Postgres(), dbname = ''sirene'', port = 5432, host = ''00.11.22.33'', user = ''nom_user'', password = ''mdp'')`
 
 -   Il suffit ensuite d'écrire les requêtes normalement à l'aide de la
-    fonction dbGetQuery :  
-    
+    fonction dbGetQuery :
+
 `dbGetQuery(cnx, ''SELECT * FROM TABLE'')`
